--- a/src/css/style.css
+++ b/src/css/style.css
@@ -264,11 +264,8 @@ nav .nav-wrapper {
       margin: 0;
       padding: 0; }
       nav .nav-wrapper.desktop ul.tabs-wrapper li.tab a {
-        background: #002044;
-        background: -moz-linear-gradient(90deg, #002044 0%, rgba(0, 32, 68, 0.8323704482) 50%, #00a1e4 100%);
-        background: -webkit-linear-gradient(90deg, #002044 0%, rgba(0, 32, 68, 0.8323704482) 50%, #00a1e4 100%);
-        background: linear-gradient(90deg, #002044 0%, rgba(0, 32, 68, 0.8323704482) 50%, #00a1e4 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#002044",endColorstr="#00a1e4",GradientType=1);
+        background-image: url("../img/background-tab.png");
+        background-size: cover;
         color: white;
         font-family: IntelClear;
         font-size: 1.4vw;
@@ -276,11 +273,7 @@ nav .nav-wrapper {
         text-transform: uppercase;
         padding: 0.35vw 8vw; }
         nav .nav-wrapper.desktop ul.tabs-wrapper li.tab a.active {
-          background: #002044;
-          background: -moz-linear-gradient(90deg, #002044 0%, #00a1e4 30%, #00a1e4 100%);
-          background: -webkit-linear-gradient(90deg, #002044 0%, #00a1e4 30%, #00a1e4 100%);
-          background: linear-gradient(90deg, #002044 0%, #00a1e4 30%, #00a1e4 100%);
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#002044",endColorstr="#00a1e4",GradientType=1); }
+          background-image: url("../img/background-tab-active.png"); }
   nav .nav-wrapper.mobile {
     display: none; }
 
@@ -318,7 +311,7 @@ nav .nav-wrapper {
     nav .nav-wrapper.mobile .tabsWrapper {
       transition: all .5s linear;
       position: absolute;
-      top: -200%;
+      top: -9999px;
       left: 0; }
       nav .nav-wrapper.mobile .tabsWrapper .tab a {
         background-image: url("../img/background-tab.png");
@@ -338,7 +331,7 @@ nav .nav-wrapper {
         align-items: center; }
       nav .nav-wrapper.mobile .tabsWrapper.active {
         top: 80px; }
-        nav .nav-wrapper.mobile .tabsWrapper.active .tab a {
+        nav .nav-wrapper.mobile .tabsWrapper.active .tab a.active {
           background-image: url("../img/background-tab-active.png"); } }
 /*******************/
 /**** XL SCREEN ****/
@@ -658,14 +651,15 @@ sup {
   .wrapper .art .btn-wrapper {
     display: flex;
     justify-content: center; }
-  .wrapper footer {
-    padding: 5% 7.81vw; }
-    .wrapper footer p.legal {
-      font-family: "IntelClearThin", sans-serif;
-      font-size: 0.85vw;
-      font-weight: 300;
-      line-height: 1.45;
-      letter-spacing: -0.06px; }
+
+footer {
+  padding: 5% 7.81vw; }
+  footer p.legal {
+    font-family: "IntelClearThin", sans-serif;
+    font-size: 0.85vw;
+    font-weight: 300;
+    line-height: 1.45;
+    letter-spacing: -0.06px; }
 
 /*****************/
 /**** MOBILE ****/
@@ -821,9 +815,10 @@ sup {
   .wrapper .art .btn-wrapper {
     display: flex;
     justify-content: center; }
-  .wrapper footer {
+
+  footer {
     padding: 15% 5.6vw; }
-    .wrapper footer p.legal {
+    footer p.legal {
       font-size: 2.2vw; } }
 /*******************/
 /**** XL SCREEN ****/
@@ -925,9 +920,10 @@ sup {
           font-size: 12.8px; }
   .wrapper .animation .animation-component-wrapper {
     padding: 0 100px; }
-  .wrapper footer {
+
+  footer {
     padding: 5% 100px; }
-    .wrapper footer p.legal {
+    footer p.legal {
       font-size: 10.88px; } }
 
 /*# sourceMappingURL=style.css.map */
